--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 </button>
 
         <div class="social">
-    <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn"></a>
-    <a href="mailto:manivpel24@gmail.com"><img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Mail"></a>
+    <a href="https://www.linkedin.com/in/manikandan-l-ba394b2bb/"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn"></a>
+<a href="mailto:manivpel24@gmail.com">
+    <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Mail">
+</a>
 </div>
 </div>
 
